# Carnot_Battery_for_DC

./: README_ENV.md  pyproject.toml  test_mac_coolprop.py
opt/multi_objective_optimization_reproduce/: position1_optimization_lhs_fixed.py  position2_optimization_lhs_fixed.py  position3_multi_objective_config.json  position3_optimization_lhs_fixed.py  position4_multi_objective_config.json  position4_optimization_lhs_fixed.py
paper/: Laterre_2024_frontier_solution_analysis.md  Laterre_2024_optimization_analysis_report.md  Laterre_2024_validation_optimization_plan.md  Latette_2024_foue_points.md  model_validation_plan.md  技术报告：面向数据中心废热回收的卡诺电池系统建模、优化与动态性能分析.md  期刊论文初稿大纲（v2.0）.md
pure_deap_nsga/: README.md  analyze_conflict.py  build_global_pareto.py  deap_optimizer.py  optimization_config.json  plot_config_decomposition.py  plot_global_pareto_DCB.py  plot_global_pareto_DCC.py  plot_global_pareto_DCD.py  plot_global_pareto_DCE_DCF.py  plot_global_pareto_etaex.py  plot_global_pareto_etaex_eth.py  plot_global_pareto_etaex_eth_laterre.py  plot_global_pareto_laterre.py  plot_pareto_pairwise.py  plot_pareto_single.py  run_optimization.py  test_optimizer.py  verify_H1.py  verify_H2.py  verify_H3.py  verify_H4.py  verify_H5.py
pure_deap_nsga/plots/: conflict_metrics_DC-A.csv
pure_deap_nsga/reports/: DC-A_pairwise_pareto_analysis.md  DC-B_pairwise_pareto_analysis.md  (+10 more)
simulation_notes/: 01_optimization_frontier_scanning.md  02_multi_config_optimization_analysis.md  _batch_eval.py  dc_config.json  dc_pareto_scan.py  key_findings.txt  pareto_frontier_scan.py
(+306 files in other folders)
